--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,11 @@
 {
     "java.project.sourcePaths": [
-        "test",
-        "src"
+        "src",
+        "test"
     ],
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
-        "/home/iut45/Etudiants/o22406613/Documents/SAE/SAE-JAVA/lib/hamcrest-core-1.3.jar",
-        "/home/iut45/Etudiants/o22406613/Documents/SAE/SAE-JAVA/lib/junit-4.13.2.jar"
+        "lib/hamcrest-core-1.3.jar",
+        "lib/junit-4.13.2.jar"
     ]
 }
