--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
         "lib/hamcrest-core-1.3.jar",
-        "lib/junit-4.13.2.jar"
+        "lib/junit-4.13.2.jar",
+        "/usr/share/java/mariadb-java-client.jar"
     ]
 }
