--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,8 +5,8 @@
     ],
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
-        "lib/hamcrest-core-1.3.jar",
-        "lib/junit-4.13.2.jar",
-        "/usr/share/java/mariadb-java-client.jar"
+        "mariadb-java-client-3.5.3.jar",
+        "c:\\Users\\roman\\Documents\\SAE-JAVA\\lib\\hamcrest-core-1.3.jar",
+        "c:\\Users\\roman\\Documents\\SAE-JAVA\\lib\\junit-4.13.2.jar"
     ]
 }
