--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,8 +5,8 @@
     ],
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
-        "mariadb-java-client-3.5.3.jar",
-        "c:\\Users\\roman\\Documents\\SAE-JAVA\\lib\\hamcrest-core-1.3.jar",
-        "c:\\Users\\roman\\Documents\\SAE-JAVA\\lib\\junit-4.13.2.jar"
+        "/usr/share/java/mariadb-java-client.jar",
+        "/home/iut45/Etudiants/o22406613/Documents/SAE/SAE-JAVA/lib/hamcrest-core-1.3.jar",
+        "/home/iut45/Etudiants/o22406613/Documents/SAE/SAE-JAVA/lib/junit-4.13.2.jar"
     ]
 }
