--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,9 @@
     ],
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
-        "/Users/arthur/Downloads/mariadb-java-client-3.5.3.jar"
+        "/Users/arthur/Downloads/mariadb-java-client-3.5.3.jar",
+        "lib/hamcrest-core-1.3.jar",
+        "lib/junit-4.13.2.jar",
+        "lib/mariadb-java-client-3.3.3.jar"
     ]
 }
