--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,13 +4,7 @@
     ],
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
-        "/usr/share/openjfx/lib/javafx.graphics.jar",
-        "/usr/share/openjfx/lib/javafx.media.jar",
-        "/home/iut45/Etudiants/o22406613/Documents/SAE/SAE-IHM/lib/mariadb-java-client-3.5.3.jar",
-        "/usr/share/openjfx/lib/javafx.fxml.jar",
-        "/usr/share/openjfx/lib/javafx.swing.jar",
-        "/usr/share/openjfx/lib/javafx.web.jar",
-        "/usr/share/openjfx/lib/javafx.controls.jar",
-        "/usr/share/openjfx/lib/javafx.base.jar"
+        "/usr/share/openjfx/lib/javafx.*",
+        "/home/iut45/Etudiants/o22406613/Documents/SAE/SAE-IHM/lib/mariadb-java-client-3.5.3.jar"
     ]
 }
